# torch-afterburner

./: README.md  nn.py  pyproject.toml
examples/: compress_mnist.py
